--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.75",
-    "@docusaurus/plugin-content-docs": "^2.0.0-alpha.75",
-    "@docusaurus/plugin-ideal-image": "^2.0.0-alpha.75",
-    "@docusaurus/preset-classic": "2.0.0-alpha.75",
+    "@docusaurus/core": "2.0.0-beta.0",
+    "@docusaurus/plugin-content-docs": "^2.0.0-beta.0",
+    "@docusaurus/plugin-ideal-image": "^2.0.0-beta.0",
+    "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "react": "^17.0.2",
